--- a/res/layout/rekam_medis.xml
+++ b/res/layout/rekam_medis.xml
@@ -51,15 +51,27 @@
             </LinearLayout>
             <!-- End Linear Layout Header -->
 
+            <TextView
+                    android:id="@+id/button_rekammedis"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#D046F2"
+                    android:text="@string/button_rekammedis"
+                    style="@android:style/TextAppearance.DeviceDefault.Medium"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginBottom="10dp"/>
+
             <!-- Start Linear Layout Profil -->
             <LinearLayout
                     android:id="@+id/ProfilLinearLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="15dp"
                     android:paddingRight="10dp"
-                    android:background="@drawable/button_rounded">
+                    android:background="@drawable/button_rounded" android:gravity="left">
 
                 <!-- Start Button Profil -->
                 <Button
@@ -101,7 +113,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_gravity="center"
-                        android:layout_marginBottom="10dp" android:layout_marginTop="10dp">
+                        android:layout_marginBottom="10dp" android:layout_marginTop="20dp">
 
                     <!-- Start Blank Space -->
                     <View
