--- a/res/layout/detail_jadwal_imunisasi.xml
+++ b/res/layout/detail_jadwal_imunisasi.xml
@@ -59,15 +59,28 @@
                 </LinearLayout>
                 <!-- End Linear Layout Header -->
 
+
+                <TextView
+                        android:id="@+id/detail_jadwal_imunisasi"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#D046F2"
+                        android:text="@string/detail_jadwal_imunisasi"
+                        style="@android:style/TextAppearance.DeviceDefault.Medium"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginBottom="10dp"/>
+
                 <!-- Start Linear Layout Profil -->
                 <LinearLayout
                         android:id="@+id/ProfilLinearLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
-                        android:layout_marginTop="15dp"
                         android:paddingRight="10dp"
-                        android:background="@drawable/button_rounded">
+                        android:background="@drawable/button_rounded" android:gravity="left">
 
                     <!-- Start Button Profil -->
                     <Button
@@ -209,12 +222,11 @@
 
                             <!-- Start Linear Layout Status Vaksin -->
                             <LinearLayout
-                                    android:id="@+id/statusVaksinLayout"
                                     android:layout_width="fill_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
                                     android:layout_weight="1"
-                                    android:layout_marginBottom="4dp" android:visibility="gone">
+                                    android:layout_marginBottom="4dp">
 
                                 <!-- Start Text View Status Vaksin -->
                                 <TextView
@@ -244,9 +256,53 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:textColor="#FF0000"
-                                        android:text="@string/status_vaksin"
+                                        android:text="@string/dash"
                                         style="@android:style/TextAppearance.DeviceDefault.Medium"/>
                                 <!-- End Text View Status Vaksin -->
+
+                            </LinearLayout>
+                            <!-- End Linear Layout Status Vaksin -->
+
+                            <!-- Start Linear Layout Status Vaksin -->
+                            <LinearLayout
+                                    android:id="@+id/tanggalVaksinLayout"
+                                    android:layout_width="fill_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:layout_weight="1"
+                                    android:layout_marginBottom="4dp" android:visibility="gone">
+
+                                <!-- Start Text View Tanggal Vaksin -->
+                                <TextView
+                                        android:id="@+id/text_tanggal_vaksin"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="#D046F2"
+                                        android:text="@string/detail_tanggal_vaksin"
+                                        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
+                                <!-- End Text View Status Vaksin -->
+
+                                <!-- Start Text View Titik Dua -->
+                                <TextView
+                                        android:id="@+id/titikdua"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="#D046F2"
+                                        android:text="@string/titikdua"
+                                        style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                        android:layout_marginRight="5dp"
+                                        android:layout_marginLeft="5dp"/>
+                                <!-- End Text View Titik Dua -->
+
+                                <!-- Start Text View Tanggal Vaksin -->
+                                <TextView
+                                        android:id="@+id/tanggal_vaksin"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:textColor="#FF0000"
+                                        android:text="@string/dash"
+                                        style="@android:style/TextAppearance.DeviceDefault.Medium"/>
+                                <!-- End Text View Tanggal Vaksin -->
 
                             </LinearLayout>
                             <!-- End Linear Layout Status Vaksin -->
