--- a/res/layout/hasil_kalkulator_gizi.xml
+++ b/res/layout/hasil_kalkulator_gizi.xml
@@ -128,14 +128,6 @@
                             <!-- End Text View Titik Dua -->
 
                             <!-- Start Text View Kalkulator Gizi Usia -->
-                            <TextView
-                                    android:id="@+id/kalkulatorgizi_usia"
-                                    android:layout_width="0dp"
-                                    android:layout_height="wrap_content"
-                                    android:textColor="#FF0000"
-                                    style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                    android:hint="@string/profil_hint_tanggallahir"
-                                    android:layout_weight=".4" android:layout_marginLeft="5dp"/>
                             <!-- End Text Viewt Kalkulator Gizi Usia-->
 
                             <!-- Start Text View Bulan -->
@@ -151,6 +143,14 @@
 
                         </LinearLayout>
 
+                        <TextView
+                                android:id="@+id/kalkulatorgizi_usia"
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="#FF0000"
+                                style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                android:hint="@string/profil_hint_tanggallahir"
+                                android:layout_marginBottom="3dp"/>
                         <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="0dp"
