--- a/res/layout/tahapan_tumbang.xml
+++ b/res/layout/tahapan_tumbang.xml
@@ -52,11 +52,11 @@
             <!-- End Linear Layout Header -->
 
             <TextView
-                    android:id="@+id/button_riwayatimunisasi"
+                    android:id="@+id/button_tahapantumbang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#D046F2"
-                    android:text="@string/button_riwayatimunisasi"
+                    android:text="@string/button_tahapantumbang"
                     style="@android:style/TextAppearance.DeviceDefault.Medium"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="20dp"
@@ -108,55 +108,23 @@
                     android:layout_marginBottom="50dp">
 
                 <!-- Start Linear Layout Content -->
-                <LinearLayout
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="10dp" android:layout_marginTop="20dp">
-
-                    <!-- Start Blank Space -->
-                    <View
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"/>
-                    <!-- End Blank Space -->
-
-                    <!-- Start Image View Button Tambah -->
-                    <ImageView
-                            android:id="@+id/button_tambah"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:adjustViewBounds="true"
-                            android:src="@drawable/tombol_tambah"
-                            android:contentDescription="@string/app_name"/>
-                    <!-- End Image View Button Tambah -->
-
-                    <!-- Start Blank Space -->
-                    <View
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"/>
-                    <!-- End Blank Space -->
-
-                </LinearLayout>
                 <!-- End Linear Layout Content -->
 
                 <TableLayout
-                        android:id="@+id/jadwal_imunisasi"
+                        android:id="@+id/tahap_tumbang"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginBottom="20dp"
                         android:stretchColumns="*"
-                        android:background="@drawable/border_table">
+                        android:background="@drawable/border_table"
+                        android:layout_marginTop="20dp">
 
                     <TableRow>
 
                         <TextView
-                                android:id="@+id/text_tanggal_vaksin"
+                                android:id="@+id/text_usia_tumbang"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
@@ -169,10 +137,10 @@
                                 android:textColor="#D046F2"
                                 style="@android:style/TextAppearance.DeviceDefault.Medium"
                                 android:background="@drawable/border_row"
-                                android:text="@string/tanggal_vaksin"/>
+                                android:text="@string/usia_tumbang"/>
 
                         <TextView
-                                android:id="@+id/text_jenis_vaksin"
+                                android:id="@+id/text_gerakan_kasar"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
@@ -182,9 +150,9 @@
                                 android:textColor="#D046F2"
                                 style="@android:style/TextAppearance.DeviceDefault.Medium"
                                 android:background="@drawable/border_row"
-                                android:text="@string/jenis_vaksin"/>
+                                android:text="@string/gerakan_kasar"/>
                         <TextView
-                                android:id="@+id/text_usia_vaksin"
+                                android:id="@+id/text_gerakan_halus"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
@@ -194,11 +162,24 @@
                                 android:background="@drawable/border_row"
                                 android:gravity="center_vertical"
                                 style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:text="@string/usia_vaksin"/>
+                                android:text="@string/gerakan_halus"/>
                         <TextView
+                                android:id="@+id/text_komunikasi"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight=".5"
+                                android:layout_weight="1"
+                                android:layout_margin="1dp"
+                                android:padding="5dp"
+                                android:textColor="#D046F2"
+                                android:background="@drawable/border_row"
+                                android:gravity="center_vertical"
+                                style="@android:style/TextAppearance.DeviceDefault.Medium"
+                                android:text="@string/komunikasi"/>
+                        <TextView
+                                android:id="@+id/text_sosial_kemandirian"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
                                 android:layout_marginTop="1dp"
                                 android:layout_marginBottom="1dp"
                                 android:layout_marginLeft="1dp"
@@ -207,7 +188,7 @@
                                 android:padding="5dp"
                                 android:textColor="#D046F2"
                                 style="@android:style/TextAppearance.DeviceDefault.Medium"
-                                android:text="@string/blank"/>
+                                android:text="@string/sosial_kemandirian"/>
                     </TableRow>
                 </TableLayout>
 
