--- a/res/layout/ubah_profil.xml
+++ b/res/layout/ubah_profil.xml
@@ -652,7 +652,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:adjustViewBounds="true"
-                                    android:src="@drawable/icon_logo"
+                                    android:src="@drawable/icon_tambahfoto"
                                     android:contentDescription="@string/app_name" android:layout_weight="1"
                                     android:layout_gravity="center"/>
                             <!-- End Image View Foto -->
